Thu Sep 22 21:51:53 1994  Theodore Y. Ts'o  (tytso@dcl)
    
    	* ktf_get_en.c (krb5_ktfile_get_entry):
	* ktf_next.c (krb5_ktfile_get_next):
	* ktf_remove.c (krb5_ktfile_remove):
	* ktf_util.c (krb5_ktfileint_read_entry,
		krb5_ktfileint_internal_read_entry):
	* ktfile.h: Change the interface of krb5_ktfile_read_entry and
		krb5_ktfile_internal_read_entry so that they don't
		allocate memory for the top-level structure.  All of their
		callers didn't need it and were freeing it anyway.
		

	* ktf_remove.c (krb5_ktfile_remove): Fix memory leak caused by not
		freeing the top-level structure.

Wed Sep 14 21:56:15 1994  Theodore Y. Ts'o  (tytso@dcl)

	* ktf_util.c (krb5_ktfileint_delete_entry):  Fixed bug reported by
		Bill Sommerfeld where a missing byte-swap on a
		little-endian machine causes the delete operation fail.
